--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
+              "src/theme.less",
               "src/styles.css"
             ],
             "scripts": []
@@ -73,7 +73,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
+              "src/theme.less",
               "src/styles.css"
             ],
             "scripts": [],
